convert date to name of day

--- a/index.html
+++ b/index.html
@@ -66,8 +66,8 @@
                 <div class="col-md-4 card ">
                     <div class="iteam">
                         <div class="uper d-flex justify-content-between  p-1 ">
-                            <p id="">Today</p>
-                            <p id="toDay">13 Decemper</p>
+                            <p id="toDay">Today</p>
+                            <p id="dateDay">13 Decemper</p>
                         </div>
                         <div class="middle  p-5">
                             <p class="city" id="city">Cairo</p>
